27.5.4
------
(RB=1793883)
Support aliases for named data schemas in PDL

27.5.3
------
(RB=1785332)
Temporarily add the "java" keyword poped from TypedUrn as excluded property keyword for pdsc to avsc schema translation

27.5.2
------
(RB=1790760)
Properly recover from corrupted uriValues in FileStore.

27.5.1
------
(RB=1785332)
remove "validate" property that brought by TypedUrn in avsc schemas

27.5.0
------
(RB=1779724)
Fix memory leak in test by properly shutting down HttpClientFactory in test data providers.
Revert commit 'f9d016b1b7f969c04368c0872b501e592c48c889' - that introduced a test failure

(RB=1780445)
Create constants for bounded load thresholds.

27.4.3
------
(RB=1775062)
Upgrade to Netty 4.1.39, Fix Deprecated Http2 APIs, Fix Netty Bug
Bumping the r2 integration test port to higher number as the tmc ORCA job is failing consistently due to port conflict

27.4.2
-------
(RB=1778282)
Precompiling regex Pattern instead of calling String.replaceAll

(RB=1770806)
Fix indentation for certain PDL encoder cases

(RB=1770797)
Extend PDL syntax to allow unions with aliases

(RB=1772174)
Fix TestDisruptFilter flaky test

27.4.1
-------
(RB=1767362)
[pgasus]: Control Pipeline V2 through a constant and a config value set through builder

(RB=1767362)
Revert "[Pegasus]: Control Pipeline V2 through a constant and a config value set through builder"

27.4.0
-------
(RB=1767362)
[Pegasus]: Control Pipeline V2 through a constant and a config value set through builder

(RB=1732683)
Adding guarantee that last operation (markUp/Down) will always win
Making more tolerant if a node is not found while deleting (since the goal is to delete it)
Giving the guarantee that markUp/Down will be called the minimum set of time to make collapse multiple markUp/markDown requests which would be idempotent

(RB=1729664)
Adding MinimumDelay mode for disrupting restli response flow

(RB=1729664)
Revert "Adding MinimumDelay mode for disrupting restli response flow"

(RB=1729664)