@@ -1,5 +1,6 @@
 namespace com.linkedin.pegasus.generator.test.idl.records
 
+@testConfig.referenceFormats = ["PRESERVE", "DENORMALIZE"]
 record RecursivelyDefinedRecord {
   self: optional RecursivelyDefinedRecord
 }
