@@ -1,5 +1,8 @@
 27.5.4
 ------
+(RB=1793893)
+Fix PDL bug for encoding self-referential schemas in DENORMALIZE mode
+
 (RB=1793883)
 Support aliases for named data schemas in PDL
 
